# dexbgd

./: .gitignore  CLAUDE.md  README.md
agent/: CLAUDE.md  CMakeLists.txt
agent/include/: jvmti.h
agent/injector/: CMakeLists.txt  build.bat
agent/injector/src/: inject.c
agent/scripts/: attach.bat  attach.sh  build.bat  build.sh  push.bat
agent/src/: agent.cpp  debugger.cpp  debugger.h  protocol.cpp  protocol.h
doc/: ai_setup.md  all_commands.md  breakpoint_cond.md  breakpoint_cond.txt
server/: CLAUDE.md  Cargo.toml
server/src/: ai.rs  ai_claude.rs  ai_ollama.rs  ai_tools.rs  app.rs  commands.rs  condition.rs  config.rs  connection.rs  debugger.rs  dex_parser.rs  dex_patcher.rs  disassembler.rs  main.rs  protocol.rs  session.rs  theme.rs
server/src/tui/: bytecodes.rs  command.rs  comment_dialog.rs  locals.rs  log.rs  mod.rs  session_picker.rs  statusbar.rs  tabbed.rs
